REpicea can now dynamically change the classpath under Java 8, 11 and 13. There is a option that must be specified for the JVM under Java 11 and 13 though.